	**************************************************
	*						 *
	*	       0.64 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 0.64.2

NEW FEATURES

BUG FIXES

    o	dput(), dump() and deparse()  now always use DBL_DIG (=15) digits
	for numeric formatting.
    
    o	chull() now works for vertical borders, such as in chull(c(1,1,2),3:1)


		CHANGES IN R VERSION 0.64.1

NEW FEATURES

    o   barplot() and boxplot() are now generic

    o   relevel function to reorder levels in factors.

    o   contr.treatment now has a base= argument for selecting the
	baseline group.

    o	New command line option `--no-environ' (under Unix) to prevent
	sourcing the `~/.Renviron' file.  Implied by `--vanilla'.

    o   Packages can now have a configure script.  If a file `configure'
	is found it is executed before anything else is done by R
	INSTALL.

    o   If HTML help files are asked for but not available, text help 
	is used. 

    o   HTML help file conversion reports unsatisified \link{..}s. 

    o   `vsize' and `nsize' can be set by the environment variables
	R_VSIZE and R_NSIZE respectively, perhaps most conveniently from
	`~/.Renviron' under Unix or Windows.  Command-line settings will
	take precedence.

        The defaults have been increased to 6M and 250k.

    o   zip files can be used for storing help and example files. See
	the help files for "help" and "example" for details.

    o   New submission method "none" (for not sending email) in
	bug.report().

    o	`R CMD check' can now also be used for installed packages without
	the corresponding sources.

    o	The sources for the Windows port are included in src/gnuwin32.
	See src/gnuwin32/readme.

BUG FIXES

    o   deparser left off empty parentheses on e.g. (function(x) x)()

    o   cat() now works on "name" objects

    o   forgot to set jump buffer in return context in one case

    o   parser dropped off tagged missing args on function calls ( f(a=) )