@@ -110,12 +110,6 @@ static SEXP lbinary(SEXP call, SEXP op, SEXP args)
     y = CADR(args) = coerceVector(y, LGLSXP);
     PROTECT(x = binaryLogic(PRIMVAL(op), x, y));
 
-    if (xts || yts) {
-	setAttrib(x, R_TspSymbol, tsp);
-	setAttrib(x, R_ClassSymbol, class);
-	UNPROTECT(2);
-    }
-
     if (dims != R_NilValue) {
 	setAttrib(x, R_DimSymbol, dims);
 	if(xnames != R_NilValue)
@@ -128,6 +122,12 @@ static SEXP lbinary(SEXP call, SEXP op, SEXP args)
 	    setAttrib(x, R_NamesSymbol, xnames);
 	else if(length(x) == length(ynames))
 	    setAttrib(x, R_NamesSymbol, ynames);
+    }
+
+    if (xts || yts) {
+	setAttrib(x, R_TspSymbol, tsp);
+	setAttrib(x, R_ClassSymbol, class);
+	UNPROTECT(2);
     }
     UNPROTECT(4);
     return x;
